// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/waitSpots DELETE /:waitSpotId delete a waitSpot 1`] = `
Object {
  "entities": Object {},
}
`;

exports[`/api/waitSpots GET / retrieve a waitSpot 1`] = `
Object {
  "entities": Object {
    "waitSpots": Object {
      "cc43f0d7-9fb0-4946-b889-f284ea48e4d0": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "appointmentId": null,
        "availableTimes": null,
        "daysOfTheWeek": Object {
          "friday": false,
          "monday": false,
          "saturday": false,
          "sunday": false,
          "thursday": false,
          "tuesday": false,
          "wednesday": false,
        },
        "endDate": "2017-09-27T00:14:30.932Z",
        "id": "cc43f0d7-9fb0-4946-b889-f284ea48e4d0",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientUserId": "b8665c97-1e98-41ac-bf13-090b742de400",
        "practitionerId": null,
        "preferences": Object {
          "afternoons": true,
          "evenings": true,
          "mornings": true,
        },
        "reasonId": null,
      },
    },
  },
  "result": Array [
    "cc43f0d7-9fb0-4946-b889-f284ea48e4d0",
  ],
}
`;

exports[`/api/waitSpots POST / create a waitSpot 1`] = `
Object {
  "entities": Object {
    "waitSpots": Object {
      "6303daf4-377e-4b70-843b-08671e6183d7": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "appointmentId": null,
        "availableTimes": null,
        "daysOfTheWeek": Object {
          "friday": false,
          "monday": false,
          "saturday": false,
          "sunday": false,
          "thursday": false,
          "tuesday": false,
          "wednesday": false,
        },
        "id": "6303daf4-377e-4b70-843b-08671e6183d7",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientUserId": "b8665c97-1e98-41ac-bf13-090b742de400",
        "practitionerId": null,
        "preferences": Object {
          "afternoons": true,
          "evenings": true,
          "mornings": true,
        },
        "reasonId": null,
      },
    },
  },
  "result": "6303daf4-377e-4b70-843b-08671e6183d7",
}
`;

exports[`/api/waitSpots POST / create a waitSpot with reason and practitioner 1`] = `
Object {
  "entities": Object {
    "waitSpots": Object {
      "6303daf4-377e-4b70-843b-08671e6183d7": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "appointmentId": null,
        "availableTimes": null,
        "daysOfTheWeek": Object {
          "friday": false,
          "monday": false,
          "saturday": false,
          "sunday": false,
          "thursday": false,
          "tuesday": false,
          "wednesday": false,
        },
        "id": "6303daf4-377e-4b70-843b-08671e6183d7",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientUserId": "b8665c97-1e98-41ac-bf13-090b742de400",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "preferences": Object {
          "afternoons": true,
          "evenings": true,
          "mornings": true,
        },
        "reasonId": "c5beec65-73a0-4b58-ba48-65986931d054",
      },
    },
  },
  "result": "6303daf4-377e-4b70-843b-08671e6183d7",
}
`;

exports[`/api/waitSpots PUT /:waitSpotId update a waitSpot 1`] = `
Object {
  "entities": Object {
    "waitSpots": Object {
      "cc43f0d7-9fb0-4946-b889-f284ea48e4d0": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "appointmentId": null,
        "availableTimes": null,
        "daysOfTheWeek": Object {
          "friday": false,
          "monday": false,
          "saturday": false,
          "sunday": false,
          "thursday": false,
          "tuesday": false,
          "wednesday": false,
        },
        "endDate": "2017-09-27T00:14:30.932Z",
        "id": "cc43f0d7-9fb0-4946-b889-f284ea48e4d0",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientUserId": "b8665c97-1e98-41ac-bf13-090b742de400",
        "practitionerId": null,
        "preferences": Object {
          "afternoons": true,
          "evenings": true,
          "mornings": true,
        },
        "reasonId": null,
      },
    },
  },
  "result": "cc43f0d7-9fb0-4946-b889-f284ea48e4d0",
}
`;
